Simplify Maven build plugins